--- a/PageAnalyzerNET/appsettings.Development.json
+++ b/PageAnalyzerNET/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; Database=PageAnalyzer; User Id=dmitry; Password=123; Pooling=true"
+    "DefaultConnection": "Server=localhost; Port=5432; Database=PageAnalyzerNET; User Id=dmitry; Password=123; Pooling=true"
   },
   "Logging": {
     "LogLevel": {
